--- a/flex.html
+++ b/flex.html
@@ -1,77 +1,107 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <style>
-        #wrap{}
-        header{ height: 45px; background-color: #5e606e;}
-    </style>
-</head>
-<body>
-    <div id="wrap">
-        <header>
-            <h1>헤더</h1>
-        </header>
-        <div id="con_wrap">
-            <div id="con_up">
-                <section class="s1-1">위-왼쪽</section>
-                <div class="con_up_right">
-                    <section class="s1-2">위-오른쪽1</section>
-                    <section class="s1-3">위-오른쪽2</section>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="css/reset.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+        <style>
+            #wrap {
+            }
+            header {
+                height: 45px;
+                background-color: #5e606e;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="wrap">
+            <header>
+                <h1>헤더</h1>
+            </header>
+            <div id="con_wrap">
+                <div id="con_up">
+                    <section class="s1-1">위-왼쪽</section>
+                    <div class="con_up_right">
+                        <section class="s1-2">위-오른쪽1</section>
+                        <section class="s1-3">위-오른쪽2</section>
+                    </div>
+                </div>
+                <div id="con_down">
+                    <section class="s2-1">아래-왼쪽</section>
+                    <section class="s2-2">아래-오른쪽</section>
                 </div>
             </div>
-            <div id="con_down">
-                <section class="s2-1">아래-왼쪽</section>
-                <section class="s2-2">아래-오른쪽</section>
-            </div>
-        </div>
-        <style>
-            #con_wrap{
-                display: flex;
-                flex-direction: column;
-                height: 600px;
-            }
-                #con_up{
-                    flex:2;
+            <style>
+                #con_wrap {
+                    display: flex;
+                    flex-direction: column;
+                    height: 600px;
+                }
+                #con_up {
+                    flex: 2;
                     display: flex;
                 }
-                    .s1-1{ 
-                        flex:1;
-                        background-color: #4ab8bc;
-                    }
-                    .con_up_right{
-                        flex: 1;
-                        display: flex;
-                        flex-direction: column;
-                    }
-                        .s1-2{
-                            flex: 1;
-                            background-color: #589dd2;
-                        }
-                        .s1-3{ 
-                            flex: 1;
-                            background-color: #ff912f;
-                        }
-                #con_down{
-                    flex:1;
-                    display: flex;                    
+                .s1-1 {
+                    flex: 1;
+                    background-color: #4ab8bc;
                 }
-                    .s2-1{ 
-                        flex: 1;
-                        background-color:  #589dd2;
-                    }
-                    .s2-2{ 
-                        flex: 1;
-                        background-color: #8dca35;
-                    }
-        </style>
-        <footer style="height: 100px; background: #5e606e;">
-            푸터
-        </footer>
-    </div>
-</body>
+                .con_up_right {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                }
+                .s1-2 {
+                    flex: 1;
+                    background-color: #589dd2;
+                }
+                .s1-3 {
+                    flex: 1;
+                    background-color: #ff912f;
+                }
+                #con_down {
+                    flex: 1;
+                    display: flex;
+                }
+                .s2-1 {
+                    flex: 1;
+                    background-color: #589dd2;
+                }
+                .s2-2 {
+                    flex: 1;
+                    background-color: #8dca35;
+                }
+            </style>
+            <footer
+                style="height: 100px; background: #5e606e"
+                ;
+                position:fixed;
+                bottom:0;
+                width:100%;
+            >
+                푸터
+            </footer>
+        </div>
+        <script>
+            //#con_wrap의 세로길이 구하기
+            var footerTop = $("footer").offset().top;
+            // 화면 제일 위에서 부터 푸터까지의 거리
+            var con_wrapTop = $("#con_wrap").offset().top;
+
+            //#con_wrap의 높이
+            var con_wrapHeight = footerTop - con_wrapTop;
+
+            $("#con_wrap").css({ height: con_wrapHeight }); //가로길이 지정
+
+            //화면 크기를 조절했을때 #con_wrap의 세로 길이 다시 지정
+            $(window).resize(function () {
+                var footerTop = $("footer").offset().top;
+                var con_wrapHeight = footerTop - con_wrapTop;
+                $("#con_wrap").css({ height: con_wrapHeight });
+            });
+        </script>
+    </body>
 </html>
