--- a/staff.html
+++ b/staff.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>아산병원</title>
+        <title>아산병원-스태프</title>
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/basic.css" />
+        <link rel="stylesheet" href="css/sub.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script defer src="js/main.js"></script>
     </head>
@@ -31,41 +32,24 @@
                     </a>
                 </div>
             </header>
-            <div id="con_wrap" class=" main_wrap">
-                <div id="con_up">
-                    <section class="s1-1">
-                        <a href="staff.html">
-                            <img
-                                src="img/img_main01.png"
-                                alt="진료과/센터로 의료진 찾기"
-                            />
-                        </a>
-                    </section>
-                    <div class="con_up_right">
-                        <section class="s1-2">
-                            <a href="#">
-                                <img src="img/img_main02.png" alt="진료예약" />
-                            </a>
-                        </section>
-                        <section class="s1-3">
-                            <a href="#">
-                                <img src="img/img_main03.png" alt="예약조회" />
-                            </a>
-                        </section>
-                    </div>
+            <div id="con_wrap" class="sub_wrap">
+                <div class="sub_title">
+                    <h2>의료진</h2>
                 </div>
-                <div id="con_down">
-                    <section class="s2-1">
-                        <a href="#">
-                            <img src="img/img_main04.png" alt="전화번호안내" />
-                        </a>
-                    </section>
-                    <section class="s2-2">
-                        <a href="#">
-                            <img src="img/img_main05.png" alt="건강검진예약" />
-                        </a>
-                    </section>
-                </div>
+                <div class="sub_con">
+                    <p>의료진 성명을 직접 입력하여 검색하거나, 진료과 또는 센터를 선택한 후 의료진을 찾을 수 있습니다.</p>
+                    <div class="sub_search">
+                        <input type="text" class="sub_search_input" placeholder="의료진명을 입력하세요">
+                        <button class="sub_search_btn">검색</button>
+                    </div><!-- .sub_search end -->
+                    <ul class="conlist">
+                        <li><a href="#"><img src="img/staff/img_step01.png" alt="진료과" width="39"></a></li>
+                        <li><a href="#"><img src="img/staff/img_step02.png" alt="암병원"  width="39"></a></li>
+                        <li><a href="#"><img src="img/staff/img_step03.png" alt="어린이병원"  width="51"></a></li>
+                        <li><a href="#"><img src="img/staff/img_step04.png" alt="심장병원"  width="90"></a></li>
+                        <li><a href="#"><img src="img/staff/img_step05.png" alt="센터"  width="41"></a></li>
+                    </ul>
+                </div><!-- .sub_con end -->
             </div>
             <footer>
                 <ul class="quickmenu">
@@ -102,7 +86,7 @@
             <ul class="lnb_list">
                 <li>
                     <a href="staff.html">
-                        <img src="img/img_lnbtab01_off.png" alt="의료진" />
+                        <img src="img/staff/img_lnbtab01_on.png" alt="의료진" />
                     </a>
                 </li>
                 <li>
